Oxide: Add fetching for environment variables that returns Option<T>
Splits support between .NET Standard 1.3 and .NET Standard 1.0. The 1.0 build
doesn't have the Environment helpers, as System.Environment is not available in
.NET Standard 1.0. Multi-targeting makes this really easy. :D

--- a/src/Oxide/Oxide.csproj
+++ b/src/Oxide/Oxide.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netstandard1.0</TargetFramework>
+    <TargetFrameworks>netstandard1.0;netstandard1.3</TargetFrameworks>
     <DebugType>full</DebugType>
   </PropertyGroup>
 
@@ -19,6 +19,12 @@
     <GenerateAssemblyFileVersionAttribute>false</GenerateAssemblyFileVersionAttribute>
     <GenerateAssemblyInformationalVersionAttribute>false</GenerateAssemblyInformationalVersionAttribute>
     <GenerateAssemblyVersionAttribute>false</GenerateAssemblyVersionAttribute>
+    <RepositoryUrl>https://github.com/bojanrajkovic/Oxide</RepositoryUrl>
+    <RepositoryType>GitHub</RepositoryType>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <DefineConstants>TRACE;DEBUG;  </DefineConstants>
   </PropertyGroup>
 
   <ItemGroup>
